# file_hash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  file_block_hash.drawio  temp_diag.drawio
src/: BuilderAbstract.hpp  CLParams.cpp  CLParams.hpp  CMakeLists.txt  FileHashSuperwiser.cpp  FileHashSuperwiser.hpp  FileReader.cpp  FileReader.hpp  FileReaderBuilder.hpp  ReaderAbstract.hpp  ReaderBuilderAbstract.hpp  WriterAbstract.hpp  main.cpp
src/abstract/: BlockProcessorAbstract.hpp  BlockReaderAbstract.hpp  ProcessorBuilderAbstract.hpp  QueueAbstract.hpp  ReaderBuilderAbstract.hpp  ResultWriterAbstract.hpp  ResultWriterBuilderAbstract.hpp
src/blocks/: Block.cpp  Block.hpp  BlockCache.cpp  BlockCache.hpp
src/fileReader/: FileReader.cpp  FileReader.hpp  FileReaderBuilder.cpp  FileReaderBuilder.hpp
src/fileWriter/: FileWriter.cpp  FileWriter.hpp  FileWriterBuilder.cpp  FileWriterBuilder.hpp
src/hashProcessor/: HashProcessor.cpp  HashProcessor.hpp  HashProcessorBuilder.cpp  HashProcessorBuilder.hpp
src/lockFree/: LockFreeQueue.cpp  LockFreeQueue.hpp
src/taskRunner/: TaskRunner.cpp  TaskRunner.hpp
src/utils/: DebugMacros.hpp  Defs.hpp  ExecutionStats.hpp
test/: CMakeLists.txt  FileHashSuperwiserTest.cpp  FileHashSuperwiserTest.hpp  TestBase.hpp  main.cpp
test/blocks/: BlockCacheTest.cpp  CMakeLists.txt
test/taskRunner/: CMakeLists.txt  TaskRunnerTest.cpp
